# AGENTS.md_generator

./: .agentsgen.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING_AI.md  LICENSE  Makefile  README.md  README_SNIPPETS.generated.md  README_SNIPPETS.md  RUNBOOK.md  agents.entrypoints.json  agents.knowledge.json  llms.txt  pyproject.toml
.github/workflows/: agentsgen-ci.yml  agentsgen-guard.example.yml  ci.yml  publish-pypi.yml  release-please.yml  set.yml
RELEASES/: template.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.2.0.md  v0.2.1.md  v0.4.0.md
badges/: yolo-badge-20260605.txt
demo/: README.md
docs/: 404.html  CNAME  agent-guidelines.md  experimental-llm.md  gh-action.html  gh-action.md  harness-readable-repo-contract.md  index.html  llmo-pack.html  llmo-pack.md  llms.txt  manifest.md  personal-workspace-router.md  release-checklist.html  release-checklist.md  robots.txt  sitemap.xml  status.md
docs/.well-known/: agent-card.json  integrations.json
docs/ai/: architecture.md  data-contracts.md  graph.mmd  how-to-run.md  how-to-test.md  id-context.json  repomap.compact.md  repomap.md
docs/ascii/: ascii.css  ascii.js
docs/assets/: script.js  styles.css
drafts/: abvx-ecosystem.md  proof-loop-v0.md  repo-config-schema.md  tool-contract.md
recipes/cli-tool/: README.md
recipes/monorepo-js/: README.md
recipes/nextjs-app/: README.md
recipes/python-lib/: README.md
scripts/: release.sh  scan_repos.py
src/agentsgen/: _smoke.py  actions.py  analyze.py  cli.py  cli_core.py  cli_extra.py  cli_fleet.py  cli_okf.py  cli_pack.py  cli_reflect.py  cli_support.py  cli_task.py  compat.py  config.py  config_io.py  constants.py  contracts.py  fleet.py  flow_ops.py  generate.py  generated_artifacts.py  llm.py  markers.py  mcp_server.py  meta.py  okf_export.py  pack_engine.py  patch_engine.py  rabbithole_seed.py  reflect_skills.py  (+10 more)
tests/: test_actions_compat.py  test_analyze_cli.py  test_check_aggregate_cli.py  test_cli_json_contracts.py  test_contract_schema_snapshots.py  test_contract_validators.py  test_detect.py  test_fleet_cli.py  test_golden_outputs.py  test_llm_enhance.py  test_markers_property.py  test_mcp_contracts.py  test_meta_cli.py  test_okf_cli.py  test_pack.py  test_pack_cli.py  test_presets_cli.py  test_reflect_cli.py  test_smoke_runtime.py  test_snippets_cli.py  test_status_cli.py  test_task_cli.py  test_understand_cli.py
(+116 files in other folders)
